--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Weather App</title>
-    <link rel="stylesheet" href="index.scss">
+    <link rel="stylesheet" href="./default.scss">
 </head>
 <body>
     <div id="root"></div>
